--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@ header{
     justify-content: center;
     align-items: center;
     height:15vh;
-    background-color: aqua;
+    background-color: rgb(19, 0, 185);
 
 
 }
@@ -36,15 +36,19 @@ main{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url(https://www.teahub.io/photos/full/198-1982646_microsoft-todo.jpg);
-    height: 70vh;
+    background-image: url(https://cdn.wallpapersafari.com/6/90/JHNAbE.jpg);
+    height: 90vh;
     background-position: center center;
     background-size: cover;
 
 }
 ul#todoList{
-    background-color: blue;
+    background-color: rgba(0, 0, 0, 0.38);
     width: 60%;
     padding: 2rem;
     border-radius: 0.5rem;
+    color: azure;
+}
+h2{
+    color: azure;
 }
